1.7.5
---
- Added check in iluScale for parameters of 0, which would cause a crash.
- Cleaned up the tons of extra lines in il_dds.c.
- Added .vtf support.

1.7.4
---
- Added German translations of error codes in ILU.
- Added ilutGLSubTex back to ilut.h.
- Added 64-bit Windows configurations to projects.
- Fixed various 64-bit bugs.
- Fixed dependency of ILUT on MSVCRT DLL.
- Redefined ILsizei as size_t.
- Changed allocation functions to ILsizei from ILuint.
- Removed ILvoid, since it is now illegal in GCC 4.2.
- Started rewriting Windows HD Photo support from scratch.
- Started DirectX 10 code.
- Changed ilSaveCHeader's second argument to char*.
- Changed ilutGLScreenie to use Unicode if needed.
- Fixed various Unicode problems with ilSetString.
- Added progressive saving of .jpg with IL_JPG_PROGRESSIVE flag.
- Added more to the Fortran wrapper.
- Fixed TIF loading/saving (#define LZW_SUPPORT not enabled in libtiff).
- Changed MSVC++ to use MSVCRT libraries again.
- Added IL_BLIT_BLEND to influence alpha blending in ilBlit/ilOverlayImage.

1.7.3
---
- ilGenImage now returns ILuint instead of ILint.
- Added pkgconfig devil.pc.
- Applied bugfixes from Richard Sims (mainly .psd).
- Added new Xcode framework.
- Added Fortran support.
- Changed MSVC++ 2005 project to link with static MSVCRT library.
- Added patch by SF user robin_charlton for Windows BMP support in ILUT.
- Updated Cmake files.
- Added preliminary Microsoft HD Photo support.
- Added better Unicode support.
- Changed .jp2 loading so that file streams can now be loaded.
- Changed limit/clamp in il.h to IL_LIMIT/IL_CLAMP.
- Added .hdr saving.
- Added Dutch/Spanish/Arabic/Japanese translations of error codes in ILU.
- Added ilut_directxm.c (DirectX Mobile support) from Vincent Richomme.
- Fixed a possible buffer overrun in iClipString.

1.7.2
---
- Added preliminary OpenEXR support.
- Fixed crash in ilSwapColours with images having bits-per-channel greater than 8.